<resources>

    <!-- App Info -->
    <string name="app_name">Inventory Manager</string>

    <!-- Login & Account -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>

    <!-- Inventory Actions -->
    <string name="inventory">Inventory</string>
    <string name="add_item_database">Add Item to Database</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Qty</string>
    <string name="add_item">Add Item</string>
    <string name="search_item">Search Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="close">Close</string>

    <!-- SMS Notifications -->
    <string name="sms_notifications">SMS Notifications</string>
    <string name="enable">Enable</string>
    <string name="skip">Skip</string>

</resources>