<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewBackgroundBox"
        android:layout_width="275dp"
        android:layout_height="375dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_grey" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/viewBackgroundBox"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text=""
        android:hint="@string/username"
        android:autofillHints="username"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/textLogin"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:hint="@string/password"
        android:autofillHints="password"
        android:textSize="15sp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:onClick="buttonLogin"
        app:layout_constraintBottom_toTopOf="@id/buttonCreateAccount"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/create_account"
        android:onClick="buttonCreateAcc"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/viewBackgroundBox"
        app:layout_constraintStart_toStartOf="@id/viewBackgroundBox"
        app:layout_constraintEnd_toEndOf="@id/viewBackgroundBox" />

</androidx.constraintlayout.widget.ConstraintLayout>